--- a/reinforcement/tensorflow/Dockerfile
+++ b/reinforcement/tensorflow/Dockerfile
@@ -1,5 +1,7 @@
 FROM nvidia/cuda:9.0-cudnn7-runtime-ubuntu16.04
 WORKDIR /research
+#SSY setting proxy for 166 gpu server
+ENV http_proxy=http://172.17.0.1:3128
 RUN apt-get update
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
@@ -23,6 +25,8 @@ WORKDIR /research/reinforcement
 
 RUN pip3 install --upgrade pip
 RUN pip3 install --upgrade setuptools
+# you need to comment out petname package, because it will cause decoding error in installing version 2.6, 
+# and then manually install petname 2.2
 RUN pip3 install -r minigo/requirements.txt
 #RUN pip3 install "tensorflow-gpu>=1.5,<1.6"
 
