--- a/single_stage_detector/Dockerfile
+++ b/single_stage_detector/Dockerfile
@@ -1,20 +1,18 @@
-FROM pytorch/pytorch:0.4_cuda9_cudnn7
+FROM pytorch/pytorch:1.0.1-cuda10.0-cudnn7-runtime
 
 # Set working directory
-WORKDIR /mlperf
+WORKDIR /mlperf/ssd
 
 RUN apt-get update && \
-    apt-get install -y python3-tk python-pip
+    apt-get install -y python3-tk python-pip && \
+    apt-get install -y numactl
+
+RUN pip install --upgrade pip
 
 # Necessary pip packages
-RUN pip install --upgrade pip
-RUN pip install Cython==0.28.4 \
-                matplotlib==2.2.2
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
 RUN python3 -m pip install pycocotools==2.0.0
 
 # Copy SSD code
-WORKDIR /mlperf
-COPY . .
-RUN pip install -r requirements.txt
-
-WORKDIR /mlperf/ssd
+COPY ssd .
